# trail-training-intelligence

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: architecture.md  dry-run-modes.md  privacy.md  repo-structure.md
examples/: README.md
examples/synthetic/: activities.csv  morning-recommendation.md  notion-dashboard-preview.md  pipeline-report.md  summary_weekly.csv
notion-trail-goal-training/: README.md  package-lock.json  package.json
notion-trail-goal-training/src/: createDashboard.ts  createDatabases.ts  createViews.ts  index.ts  markdownExport.ts  notionClient.ts  schemas.ts  seedData.ts  types.ts
notion-trail-goal-training/tests/: schemas.test.ts  seedData.test.ts
notion-ventoux-training/: .gitignore  README.md  package-lock.json  package.json
notion-ventoux-training/src/: createDashboard.ts  createRows.ts  createViews.ts  index.ts  markdownExport.ts  schemas.ts  seedData.ts  types.ts
notion-ventoux-training/tests/: schemas.test.ts  seedData.test.ts
runalyze-morning-sync/: .gitignore  README.md  package-lock.json  package.json  tsconfig.public.json
runalyze-morning-sync/src/: conditionAnalysis.ts  dates.ts  output.ts  planCsv.ts  recommendation.ts  retry.ts  types.ts
runalyze-morning-sync/tests/: conditionAnalysis.test.ts  dates.test.ts  planCsv.test.ts  recommendation.test.ts  retry.test.ts
src/trail_data_pipeline/: __init__.py  __main__.py  cli.py  metrics.py  normalization.py  plots.py  report.py
src/trail_data_pipeline/loaders/: base.py  (+3 more)
tests/: test_metrics.py  test_normalization.py  test_zip_loader.py
